# 3DViewer_Qt

src/: .vimspector.json  .ycm_extra_conf.py  CMakeLists.txt  Makefile  config.json  log.txt  tags
src/code_c/: .vimspector.json  Makefile  functional.c  functional.h  functional_viewer.c  functional_viewer.h  logging_manager.c  logging_manager.h  s21_read_object.c  s21_read_object.h  tags
src/code_c/gcov_obj/: functional_test.c  functional_test2.c  s21_read_object_test.c
src/documents/: doc.txt
src/lib/: CMakeLists.txt
src/lib/3DViewer/: CMakeLists.txt
src/lib/3DViewer/includes/: mainwindow.hpp  mywidgetopengl.hpp
src/lib/3DViewer/srcs/: mainwindow.cpp  mainwindow.ui  mywidgetopengl.cpp  tags
src/lib/3DViewer/tests/: CMakeLists.txt
src/lib/3DViewer/tests/test_mywidgetopengl/: CMakeLists.txt
src/lib/3DViewer/tests/test_mywidgetopengl/includes/: test_mywidgetopengl.hpp
src/lib/3DViewer/tests/test_mywidgetopengl/qrc/: objects_test.qrc
src/lib/3DViewer/tests/test_mywidgetopengl/srcs/: test_mywidgetopengl.cpp
src/lib/QtGifImage/: CMakeLists.txt
src/lib/QtGifImage/includes/: gifcreator.h
src/lib/QtGifImage/srcs/: gifcreator.cpp
src/qrc/: objects.qrc
src/srcs/: main.cpp
